test/expected/cli/shit_ansi_variables.out
SHIT_ANSI_BLACK  []
SHIT_ANSI_RED    []
SHIT_ANSI_GREEN  []
SHIT_ANSI_YELLOW []
SHIT_ANSI_BLUE   []
SHIT_ANSI_MAGENTA []
SHIT_ANSI_CYAN   []
SHIT_ANSI_WHITE  []
SHIT_ANSI_BRIGHT_BLACK []
SHIT_ANSI_BRIGHT_RED []
SHIT_ANSI_BRIGHT_GREEN []
SHIT_ANSI_BRIGHT_YELLOW []
SHIT_ANSI_BRIGHT_BLUE []
SHIT_ANSI_BRIGHT_MAGENTA []
SHIT_ANSI_BRIGHT_CYAN []
SHIT_ANSI_BRIGHT_WHITE []
SHIT_ANSI_BOLD   []
SHIT_ANSI_DIM    []
SHIT_ANSI_RESET  []
SHIT_ANSI_BOGUS  [MISSING]
stored=[stored]
sh_green=[]
shit: 1:14: error: Unable to expand 'SHIT_ANSI_NOPE' because the parameter is not set.
     1 |  set -u; echo "${SHIT_ANSI_NOPE}"
       |               ^~~~~~~~~~~~~~~~~~~ here.
note: Replace it with ${SHIT_ANSI_NOPE-} if empty expansion is desired.
rc=1
